# Gemini-Keychecker

./: .gitignore  Cargo.toml  Config.toml.example  README.md  release.sh
.github/workflows/: build.yml  ci.yml  dev-build.yml  release-build.yml  release.yml
src/: error.rs  key_validator.rs  lib.rs  main.rs  types.rs  validation.rs
src/adapters/: mod.rs
src/adapters/input/: local.rs
src/adapters/output/: local.rs  mod.rs
src/config/: basic_client.rs  basic_config.rs  config.rs  mod.rs
src/service/: http_client.rs  key_tester.rs  mod.rs  validation.rs
src/utils/: http.rs  http_client.rs  mod.rs  request.rs  writer.rs
src/validation/: key_validator.rs  mod.rs  validation_service.rs
