[package]
name = "gemini-keychecker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
backon = "1"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
url = { version = "2.5.4", features = ["serde"] }
async-stream = "0.3"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"
