[package]
name = "gemini-keychecker"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "*" }
anyhow = "1.0"
backon = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls","http2"] }
serde_json = "1.0"
tokio = { version = "1.46", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
url = { version = "2.5", features = ["serde"] }
async-stream = "0.3"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
