[package]
name = "gemini-keychecker"
version = "0.1.1"
edition = "2024"

[dependencies]
mimalloc = { version = "*" }
backon = "1.5"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls","http2"] }
serde_json = "1.0"
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
url = { version = "2.5", features = ["serde"] }
async-stream = "0.3"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-indicatif = "0.3.12"
indicatif = "0.18.0"
